--- a/css/motion.scss
+++ b/css/motion.scss
@@ -3,7 +3,7 @@ $t_size: 16px;
 
 body {
   overflow: hidden;
-  font-size: $t-size;
+  font-size: $t_size;
 }
 
 .song {
@@ -100,6 +100,15 @@ body {
     opacity: 0;
     transition: all 0.14s ease-in;
     z-index: 2;
+
+    .play {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      width: 100%;
+      height: 100%;
+    }
 
     @media #{$mobile} {
       top: 40%;
