--- a/player/css/reset.css
+++ b/player/css/reset.css
@@ -8,19 +8,19 @@
 
 @font-face {
     font-family: malvie;
-    src: url("../assets/Malvie.otf");
+    src: url("Desktop/development/threeJS-practice/assets/Malvie.otf");
     unicode-range: U+0041-005A, U+0061-007A, U+0030-0039;
 }
 
 @font-face {
     font-family: malvie;
-    src: url("../assets/OK GUNG.otf");
+    src: url("Desktop/development/threeJS-practice/assets/OK GUNG.otf");
     unicode-range: U+AC00-D7A3;
 }
 
 @font-face {
     font-family: ok gung;
-    src: url("../assets/OK GUNG.otf");
+    src: url("Desktop/development/threeJS-practice/assets/OK GUNG.otf");
 }
 
 html {
