--- a/card/css/card.css
+++ b/card/css/card.css
@@ -5,6 +5,7 @@ body {
     font-family: 'Nanum Myeongjo', serif;
     background: #212121;
     color: white;
+    font-size: 16px;
 }
 
 h1 {
@@ -19,4 +20,65 @@ section {
     position: relative;
     height: 100vh;
     width: 100vw;
+}
+
+section .card {
+    position: absolute;
+    width: 200px;
+    left: 0;
+    border-radius: 4px;
+    box-shadow: 4px 4px 12px rgba(0, 0, 0, 0.2);
+    transform: rotate(90deg);
+    border: 1px solid rgba(255, 255, 255, 0.2);
+}
+
+section .card img {
+    width: 100%;
+    object-fit: contain;
+}
+
+section .card:nth-child(1) {
+    left: 36px;
+}
+
+section .card:nth-child(2) {
+    left: 24px;
+}
+section .card:nth-child(3) {
+    left:12px;
+}
+section .card:nth-child(4) {
+    left: 0;
+}
+
+.button-wrap {
+    position: absolute;
+    bottom: 20px;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+    gap: 24px;
+}
+
+.button-wrap button {
+    z-index: 100;
+    background: rgba(0, 0, 0, 0.2);
+    min-width: 240px;
+    height: 64px;
+    transition: all 0.14s ease-out;
+    font-weight: 700;
+    font-size: 1.2vw;
+    border-radius: 4px;
+}
+
+.button-wrap button:disabled {
+    color: rgba(255, 255, 255, 0.2);
+    cursor: default;
+}
+
+.button-wrap button:hover:not([disabled]) {
+    background: black;
+    transition: all .14s ease-out;
+    transform: translate(-0.25rem,-0.25rem);
+    box-shadow: 0.25rem 0.25rem white;
 }
